<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Mainv2.CTCungcapLayout"
    >
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/CT_backBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:backgroundTint="@color/transparent"
            app:icon="@drawable/baseline_arrow_back_ios_black_18"
            app:iconGravity="textStart"
            app:iconPadding="5dp"
            app:iconTint="#000" />
        <TextView
            android:id="@+id/heading"
            android:layout_below="@+id/toolbar"
            style="@style/Heading"
            android:text="CT Cung cấp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/CT_insertBtn"
            style="@style/Btn"
            android:layout_width="50dp"
            app:icon="@drawable/outline_add_black_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="#000"
            app:cornerRadius="100dp"
            android:backgroundTint="@color/disable_color"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:paddingHorizontal="30dp">
            <TextView
                style="@style/textBlack"
                android:text="@string/phieu_cung_cap" />
            <TextView
                android:id="@+id/CT_SPview"
                android:layout_marginLeft="20dp"
                style="@style/textBlack"
                android:textSize="20dp"
                android:text="P001"
                android:textColor="@color/thoatbtn_bgcolor"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:paddingHorizontal="30dp">
            <TextView
                style="@style/textBlack"
                android:text="@string/ngay_giao" />
            <TextView
                android:id="@+id/CT_NGview"
                android:layout_marginLeft="20dp"
                style="@style/textBlack"
                android:text="02/06/2018"
                android:textColor="@color/thoatbtn_bgcolor"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:paddingHorizontal="30dp">
            <TextView
                style="@style/textBlack"
                android:text="@string/nha_cc" />
            <TextView
                android:id="@+id/CT_NCCview"
                android:layout_marginLeft="20dp"
                style="@style/textBlack"
                android:text="A"
                android:textColor="@color/thoatbtn_bgcolor"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:paddingHorizontal="30dp">
            <TextView
                style="@style/textBlack"
                android:text="@string/trang_thai" />
            <TextView
                android:id="@+id/CT_TTview"
                android:layout_marginLeft="20dp"
                style="@style/textBlack"
                android:textStyle="bold"
                android:text="OPENING"
                android:textColor="@color/thoatbtn_bgcolor"
                />
        </LinearLayout>
    </LinearLayout>
    <!-- + @+id/Toolbar + -->
    <!--///////////////////////////////////////////////////////-->
    <!-- + Table Container + -->
    <LinearLayout
        android:layout_weight="1"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Main.NhanvienLayout"
        >
        <!--    Header of the table -->
        <!--    70 p0 / 70 p0 / 85 p0 / 55 p0 / 110 p0-->
        <TableLayout
            style="@style/tableLayoutStyle"
            android:layout_width="match_parent"
            android:stretchColumns="4"
            >
            <TableRow>
                <TextView
                    style="@style/tableHeader"
                    android:text="@string/id"
                    android:layout_width="70dp"
                    />
                <TextView
                    style="@style/VPPHeader_secCellWidth"
                    android:text="@string/vpp"
                    android:layout_width="70dp"
                    android:padding="0dp"/>

                <TextView
                    style="@style/tableHeader"
                    android:text="@string/ten_vpp"
                    android:layout_width="85dp"
                    android:padding="0dp"/>
                <TextView
                    style="@style/tableHeader"
                    android:text="@string/sl"
                    android:width="55dp"
                    android:padding="0dp"/>
                <TextView
                    style="@style/tableHeader"
                    android:text="@string/thanh_tien"
                    android:layout_width="110dp"
                    android:padding="0dp"/>
            </TableRow>
            <!--    Content of the table -->
        </TableLayout>
        <!--    70 / 70 p0 / 85 p0 / 55 p0 / <= 110 p0  -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableLayout
                android:id="@+id/CT_table_list"
                style="@style/tableLayoutStyle"
                android:stretchColumns="4"
                >
                <!--         Generate Row based on Data here   -->
                <TableRow>
                    <TextView
                        style="@style/tableRow"
                        android:text="1"
                        android:layout_width="70dp"
                        android:layout_height="0dp"
                        />
                    <TextView
                        style="@style/tableRow"
                        android:text="VPP1"
                        android:layout_width="70dp"
                        android:padding="0dp"/>

                    <TextView
                        style="@style/tableRow"
                        android:text="Giấy A4"
                        android:layout_width="85dp"
                        android:padding="0dp"/>
                    <TextView
                        style="@style/tableRow"
                        android:text="20"
                        android:width="55dp"
                        android:padding="0dp"/>
                    <TextView
                        style="@style/tableRow"
                        android:text="4.000.000đ"
                        android:layout_width="110dp"
                        android:padding="0dp"/>
                </TableRow>
            </TableLayout>
        </ScrollView>
    </LinearLayout>
    <!--///////////////////////////////////////////////////////-->
    <!-- + @+id/subToolbar + -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp"
        android:paddingVertical="5dp">
        <TextView
            style="@style/textBlack"
            android:text="@string/tong_tien"
            android:textColor="@color/yes_color"
            />
        <TextView
            android:id="@+id/CT_totalMoney"
            android:layout_marginLeft="110dp"
            style="@style/textBlack"
            android:textSize="22dp"
            android:text="100.000.000đ"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginHorizontal="10dp"
        android:layout_below="@+id/table_container"
        android:id="@+id/subToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/CT_delBtn"
            style="@style/Btn"
            android:text="@string/xoa"
            android:backgroundTint="#DD4545"
            app:icon="@drawable/outline_delete_24"
            app:iconGravity="textStart"
            app:iconPadding="5dp"
            app:iconTint="#000"
            android:textColor="@color/black"
            />
        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/CT_editBtn"
            style="@style/Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sua"
            android:textColor="#000"
            android:backgroundTint="#3C7AD8"
            app:icon="@drawable/outline_settings_24"
            app:iconGravity="textStart"
            app:iconPadding="5dp"
            app:iconTint="#000"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginBottom="30dp">
            <Button
                android:id="@+id/CT_previewBtn"
                android:drawableLeft="@drawable/baseline_visibility_black_24"
                style="@style/Btn"
                android:paddingLeft="12dp"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#50E363"
                android:layout_marginRight="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        layout="@layout/_created_by_3xdteam"/>
</LinearLayout>
