<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NhanvienLayout"
    >
    <TextView
        android:id="@+id/heading"
        android:layout_below="@+id/toolbar"
        style="@style/Heading"
        android:text="@string/nhan_vien"
        />
    <TextView
        style="@style/tempCombobox"
        />
    <!--  Header of the table -->
    <!--    65 p0 / 220 / <= 100 p0-->
    <TableLayout
        style="@style/tableLayoutStyle"
        android:stretchColumns="2"
        >
        <TableRow>

            <TextView
                style="@style/tableHeader"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:text="@string/ma_nv" />
            <TextView
                style="@style/tableHeader"
                android:text="@string/ten_nv"
                android:layout_width="220dp"
                />
            <TextView
                style="@style/tableHeader"
                android:text="@string/ngay_sinh"
                android:maxWidth="100dp"
                />
        </TableRow>

    </TableLayout>
    <!--    Content of the table -->
    <!--    65 p0 / 220 / <= 100 p0-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            style="@style/tableLayoutStyle"
            android:stretchColumns="2">
            <!--         Generate Row based on Data here   -->
            <TableRow>
                <TextView
                    style="@style/tableRow"
                    android:text="NV1"
                    android:layout_width="65dp"
                    android:padding="0dp"
                    />
                <TextView
                    style="@style/tableRow"
                    android:text="Nguyễn Thành Nam"
                    android:layout_width="220dp"
                    />
                <TextView
                    style="@style/tableRow"
                    android:text="18/01/1982"
                    android:maxWidth="100dp"
                    android:padding="0dp"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/tableRow"
                    android:text="NV2"
                    android:layout_width="65dp"
                    android:padding="0dp"
                    android:background="@drawable/table_lightdark_border"
                    />
                <TextView
                    style="@style/tableRow"
                    android:text="Vũ Thị Thắm"
                    android:layout_width="220dp"
                    android:background="@drawable/table_lightdark_border"
                    />
                <TextView
                    style="@style/tableRow"
                    android:text="08/12/1992"
                    android:maxWidth="100dp"
                    android:padding="0dp"
                    android:background="@drawable/table_lightdark_border"
                    />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>